# hecto

./: .gitignore  .travis.yml  Makefile  README.md  mm.py  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
hecto/: main.py  tools.py
hecto/utils/: __init__.py  jinja_render.py  load_config.py
tests/: conftest.py  helpers.py  test_copy.py  test_defaults.py  test_output.py  test_prompt.py  test_tools.py  test_vcs.py
tests/demo/: pyproject.toml.tmpl
tests/references/: pyproject.toml
tests/test_utils/: test_render.py
