[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Hecto"
version = "1.0.0"
description = "A library for rendering projects templates"
license = "Apache License Version 2.0"

readme = "README.md"
homepage = "https://github.com/jpsca/hecto"

# Requirements
[tool.poetry.dependencies]
python = "^3.6"
